--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "mongoose": "^8.1.1"
   },
