--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
-    "mongoose": "^8.1.1"
+    "mongoose": "^8.1.1",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "debug": "^4.3.4",
