--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "node ./bin/www",
     "dev": "NODE_ENV=development nodemon ./bin/www",
     "lint-staged": "lint-staged",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "NODE_ENV=test jest --config ./jest.config.js --runInBand --detectOpenHandles",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -18,6 +20,7 @@
     "pug": "^3.0.2"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.2.0",
     "debug": "^4.3.4",
     "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -27,9 +30,11 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.7",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.1",
     "nodemon": "^3.0.3",
-    "prettier": "^3.2.4"
+    "prettier": "^3.2.4",
+    "supertest": "^6.3.4"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix"
